--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "react-scripts": "^1.0.1",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
     "prop-types": "^15.5.10",
